--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1> Full Stack Shopping on GIT.</h1>
   <p> This is our first site on GIT. </p>
+  <p> Modified from VS Code.</p>
 </body>
 </html>
